# realsense_vrs_sandbox

./: .gitignore  .gitmodules  README.md  convert_to_vrs.py  extract_realsense_data.py  main.py  pyproject.toml  stream_realsense_data.py
data/rosbag/: 20251119_112125.bag
docs/: options_stream_design.md  phase1a_blocker_resolution_strategy.md  pyvrs_api_investigation.md  rosbag_to_vrs_mapping_spec.md  rosbag_vrs_verification_plan_nov19.md  transform_stream_design.md  vrs_writer_design.md  work_plan_rosbag_to_vrs_nov19_2025.md
pyvrs_writer/: CMakeLists.txt  README.md  setup.py
pyvrs_writer/include/: vrs_writer.h
pyvrs_writer/python/pyvrs_writer/: __init__.py
pyvrs_writer/python/pyvrs_writer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyvrs_writer/python_tests/: test_pyvrs_writer.py
pyvrs_writer/src/: bindings.cpp  vrs_writer.cpp
pyvrs_writer/tests/: CMakeLists.txt  test_vrs_writer.cpp
scripts/: __init__.py  data_extractor.py  investigate_pyvrs_api.py  rosbag_reader.py  rosbag_to_vrs_converter.py  timestamp_handler.py  vrs_reader.py  vrs_writer.py
tests/: __init__.py  conftest.py  test_data_extractor.py  test_rosbag_reader.py  test_timestamp_handler.py  test_vrs_import.py  test_vrs_reader.py  test_vrs_writer.py
