[project]
name = "vrs-sandbox"
version = "0.1.0"
description = "RealSense ROS bag data extraction tool"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "pyrealsense2>=2.50.0",
    "rosbags>=0.9.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "vrs>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=scripts --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
